# Question_DB

./: .env.example  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  README_分析.md  explain.md  plan.md  requirements.txt  代码审查报告.md  分级阅读指南.md  工作报告.md  幻觉检查报告.md
api/: main.py
data/: .gitkeep
deploy/: question-bank.service.template
docs/: deployment_guide.md  faq.md  field_dictionary.md  ingestion_guide.md  maintenance_manual.md  project_definition.md
migrations/: 0001_init_pg.sql  0002_add_question_score.sql
question_bank/: __init__.py  bundle.py  config.py  db.py  difficulty.py  exporter.py  importer.py  quality.py  repository.py  schema.py  stats.py  utils.py
raw/: README.md
rust/qb_api/src/: api.rs  config.rs
samples/demo_bundle/: manifest.json
samples/demo_bundle/questions/: QB-2024-E-02.json  QB-2024-E-03.json  QB-2024-T-01.json
samples/demo_bundle/stats/: raw_scores.csv
scripts/: calculate_difficulty.py  check_data_quality.py  export_data.py  generate_samples.sh  import_bundle.py  import_stats.py  init_db.py  register_raw_assets.py  test_full_flow.py  test_full_flow.sh  validate_bundle.py
scripts/tests/: config.py  fixtures.py  full_flow.py  session.py  specs.py  validators.py
src/: api.rs  config.rs  db.rs  lib.rs  main.rs
src/api/: error.rs  exports.rs  handlers.rs  imports.rs  mod.rs  models.rs  quality.rs  queries.rs  tests.rs  utils.rs
src/api/ops/: API.md  bundles.rs  exports.rs  handlers.rs  mod.rs  models.rs  quality.rs  (+1 more)
tests/: __init__.py  health_route.rs  test_init_and_import.py  test_stats_and_difficulty.py
(+18 files in other folders)
